[package]
name = "streamdal-gjson"
version = "0.8.4-delete-path-fix"
authors = ["Josh Baker <joshbaker77@gmail.com>", "Daniel Selans <daniel@streamdal.com>", "Mark Gregan <mark@streamdal.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/streamdal/gjson"
documentation = "https://docs.rs/streamdal-gjson/"
description = "Get (and set) JSON values quickly"

[lib]
doctest = false
[dependencies]
bytes = "1.5.0"
